# starlet

./: INSTALL.md  README.md  compile.sh  guile-ola.cpp  meson.build
docs/: basic-control.rst  cue-list.rst  fixture-display.rst  new-fixture.rst  patching.rst  physical-control.rst
examples/: demo-show.scm  demo.scm  show.qlist.scm  show.scm
guile/dsil/: base.scm  fixture.scm
guile/dsil/fixture-library/: generic.scm
guile/guile-midi/: control.scm
guile/guile-osc/: engine.scm
guile/starlet/: attributes.scm  base.scm  clock.scm  colours.scm  crossfade.scm  cue-list.scm  cue-part.scm  effects.scm  engine.scm  fixture.scm  guile-ola.scm  playback.scm  scanout.scm  selection.scm  snap-transition.scm  state-rw.scm  state.scm  transition-effect.scm  utils.scm
guile/starlet/fixture-library/: arduino.scm  generic.scm  robe.scm
guile/starlet/fixture-library/adj/: mega-tripar-profile.scm
guile/starlet/fixture-library/chauvet/: mav2.scm
guile/starlet/fixture-library/chauvet/mav2/: 32chan.scm
guile/starlet/fixture-library/generic/: any-rgb.scm  dimmer.scm  rgb.scm
guile/starlet/fixture-library/lightmaxx/: led-cob.scm
guile/starlet/fixture-library/robe/: dl7s.scm  mmxspot.scm  mmxwashbeam.scm
guile/starlet/fixture-library/robe/dl7s/: mode1.scm
guile/starlet/fixture-library/robe/mmxspot/: mode1.scm
guile/starlet/fixture-library/robe/mmxwashbeam/: mode1.scm
guile/starlet/fixture-library/stairville/: octagon-theater-cw-ww.scm  z120m.scm
guile/starlet/fixture-library/tadm/: led-bar.scm  led-foh.scm
guile/starlet/midi-control/: base.scm  button-utils.scm  faders.scm  playback-buttons.scm
guile/starlet/open-sound-control/: utils.scm
guile/starlet/osc/: engine.scm
guile/taw/: controls.scm
guile/venues/: demo-venue.scm
po/: POTFILES  meson.build  starlet.pot
shows/demo-show/: cue-list.scm  demo-show.scm  patch.scm
src/: guile-ola.cpp  guile-osc.c  lispmachine.c  lispmachine.h  repl-connection.c  repl-connection.h  starlet-editor.c  starlet-fixture-display.c  starlet-playback-display.c
